--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=ERM19264_UC1609_T
-version=1.0.0
+name=ERM19264_UC1609_TEXT
+version=1.1.0
 author=Gavin Lyons <glyons66@hotmail.com>
 maintainer=Gavin Lyons <glyons66@hotmail.com>
 sentence=Library to Support the ERM19264 LCD driven by the UC1609C controller
-paragraph=Light weight text-only mode. Text, bitmaps.. hardware and software SPI. Invert, rotate, sleep, contrast & bias control.  
+paragraph=Light weight text-only mode. Text, bitmaps, hardware and software SPI, Invert, rotate, sleep, contrast & bias control.  
 category=Display
-url=https://github.com/gavinlyonsrepo/ERM19264_UC1609_T
+url=https://github.com/gavinlyonsrepo/ERM19264_UC1609_TEXT
 architectures=*
